@@ -4,6 +4,7 @@ import com.sun.source.util.TreePath;
 import com.sun.source.util.Trees;
 import com.sun.tools.javac.api.JavacScope;
 import com.sun.tools.javac.code.Kinds;
+import com.sun.tools.javac.code.Kinds.KindSelector;
 import com.sun.tools.javac.code.Symbol;
 import com.sun.tools.javac.code.Symbol.ClassSymbol;
 import com.sun.tools.javac.code.Symbol.PackageSymbol;
@@ -28,8 +29,14 @@ import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeMirror;
+import org.checkerframework.checker.nullness.qual.NonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 
 /** A Utility class to find symbols corresponding to string references. */
+// This class reflectively accesses jdk.compiler/com.sun.tools.javac.comp.
+// This is why --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED is required when
+// running the Checker Framework.  If this class is re-written, then that --add-opens should be
+// removed.
 public class Resolver {
     private final Resolve resolve;
     private final Names names;
@@ -58,7 +65,6 @@ public class Resolver {
                             List.class,
                             List.class,
                             boolean.class,
-                            boolean.class,
                             boolean.class);
             FIND_METHOD.setAccessible(true);
 
@@ -66,12 +72,17 @@ public class Resolver {
             FIND_VAR.setAccessible(true);
 
             FIND_IDENT =
-                    Resolve.class.getDeclaredMethod("findIdent", Env.class, Name.class, int.class);
+                    Resolve.class.getDeclaredMethod(
+                            "findIdent", Env.class, Name.class, KindSelector.class);
             FIND_IDENT.setAccessible(true);
 
             FIND_IDENT_IN_TYPE =
                     Resolve.class.getDeclaredMethod(
-                            "findIdentInType", Env.class, Type.class, Name.class, int.class);
+                            "findIdentInType",
+                            Env.class,
+                            Type.class,
+                            Name.class,
+                            KindSelector.class);
             FIND_IDENT_IN_TYPE.setAccessible(true);
 
             FIND_IDENT_IN_PACKAGE =
@@ -80,7 +91,7 @@ public class Resolver {
                             Env.class,
                             TypeSymbol.class,
                             Name.class,
-                            int.class);
+                            KindSelector.class);
             FIND_IDENT_IN_PACKAGE.setAccessible(true);
 
             FIND_TYPE = Resolve.class.getDeclaredMethod("findType", Env.class, Name.class);
@@ -147,13 +158,13 @@ public class Resolver {
      * @param path the tree path to the local scope
      * @return the {@code PackageSymbol} for the package if it is found, {@code null} otherwise
      */
-    public PackageSymbol findPackage(String name, TreePath path) {
+    public @Nullable PackageSymbol findPackage(String name, TreePath path) {
         Log.DiagnosticHandler discardDiagnosticHandler = new Log.DiscardDiagnosticHandler(log);
         try {
             Env<AttrContext> env = getEnvForPath(path);
             Element res =
                     wrapInvocationOnResolveInstance(
-                            FIND_IDENT, env, names.fromString(name), Kinds.PCK);
+                            FIND_IDENT, env, names.fromString(name), Kinds.KindSelector.PCK);
             // findIdent will return a PackageSymbol even for a symbol that is not a package,
             // such as a.b.c.MyClass.myStaticField. "exists()" must be called on it to ensure
             // that it exists.
@@ -177,15 +188,20 @@ public class Resolver {
      * @param name the name of the field
      * @param type the type of the receiver (i.e., the type in which to look for the field).
      * @param path the tree path to the local scope
-     * @return the element for the field
+     * @return the element for the field, {@code null} otherwise
      */
-    public VariableElement findField(String name, TypeMirror type, TreePath path) {
+    public @Nullable VariableElement findField(String name, TypeMirror type, TreePath path) {
         Log.DiagnosticHandler discardDiagnosticHandler = new Log.DiscardDiagnosticHandler(log);
         try {
             Env<AttrContext> env = getEnvForPath(path);
             Element res =
                     wrapInvocationOnResolveInstance(
-                            FIND_IDENT_IN_TYPE, env, type, names.fromString(name), Kinds.VAR);
+                            FIND_IDENT_IN_TYPE,
+                            env,
+                            type,
+                            names.fromString(name),
+                            Kinds.KindSelector.VAR);
+
             if (res.getKind() == ElementKind.FIELD) {
                 return (VariableElement) res;
             } else if (res.getKind() == ElementKind.OTHER && ACCESSERROR.isInstance(res)) {
@@ -205,9 +221,10 @@ public class Resolver {
      *
      * @param name the name of the local variable
      * @param path the tree path to the local scope
-     * @return the element for the local variable
+     * @return the element for the local variable, {@code null} otherwise
      */
-    public VariableElement findLocalVariableOrParameterOrField(String name, TreePath path) {
+    public @Nullable VariableElement findLocalVariableOrParameterOrField(
+            String name, TreePath path) {
         Log.DiagnosticHandler discardDiagnosticHandler = new Log.DiscardDiagnosticHandler(log);
         try {
             Env<AttrContext> env = getEnvForPath(path);
@@ -253,13 +270,17 @@ public class Resolver {
      * @param path the tree path to the local scope
      * @return the {@code ClassSymbol} for the class if it is found, {@code null} otherwise
      */
-    public ClassSymbol findClassInPackage(String name, PackageSymbol pck, TreePath path) {
+    public @Nullable ClassSymbol findClassInPackage(String name, PackageSymbol pck, TreePath path) {
         Log.DiagnosticHandler discardDiagnosticHandler = new Log.DiscardDiagnosticHandler(log);
         try {
             Env<AttrContext> env = getEnvForPath(path);
             Element res =
                     wrapInvocationOnResolveInstance(
-                            FIND_IDENT_IN_PACKAGE, env, pck, names.fromString(name), Kinds.TYP);
+                            FIND_IDENT_IN_PACKAGE,
+                            env,
+                            pck,
+                            names.fromString(name),
+                            Kinds.KindSelector.TYP);
             if (res.getKind() == ElementKind.CLASS) {
                 return (ClassSymbol) res;
             } else {
@@ -299,7 +320,6 @@ public class Resolver {
             List<Type> typeargtypes = List.nil();
             boolean allowBoxing = true;
             boolean useVarargs = false;
-            boolean operator = true;
 
             try {
                 // For some reason we have to set our own method context, which is rather ugly.
@@ -316,8 +336,7 @@ public class Resolver {
                                 argtypes,
                                 typeargtypes,
                                 allowBoxing,
-                                useVarargs,
-                                operator);
+                                useVarargs);
                 setField(resolve, "currentResolutionContext", oldContext);
                 return result;
             } catch (Throwable t) {
@@ -351,12 +370,13 @@ public class Resolver {
         setField(methodContext, "attrMode", DeferredAttr.AttrMode.CHECK);
         @SuppressWarnings("rawtypes")
         List<?> phases = (List) getField(resolve, "methodResolutionSteps");
+        assert phases != null : "@AssumeAssertion(nullness): assumption";
         setField(methodContext, "step", phases.get(1));
         return methodContext;
     }
 
     /** Reflectively set a field. */
-    private void setField(Object receiver, String fieldName, Object value)
+    private void setField(Object receiver, String fieldName, @Nullable Object value)
             throws NoSuchFieldException, IllegalAccessException {
         Field f = receiver.getClass().getDeclaredField(fieldName);
         f.setAccessible(true);
@@ -364,28 +384,30 @@ public class Resolver {
     }
 
     /** Reflectively get the value of a field. */
-    private Object getField(Object receiver, String fieldName)
+    private @Nullable Object getField(Object receiver, String fieldName)
             throws NoSuchFieldException, IllegalAccessException {
         Field f = receiver.getClass().getDeclaredField(fieldName);
         f.setAccessible(true);
         return f.get(receiver);
     }
 
+    /** Wrap a method invocation on the {code resolve} object. */
     private Symbol wrapInvocationOnResolveInstance(Method method, Object... args) {
         return wrapInvocation(resolve, method, args);
     }
 
-    private Symbol wrapInvocation(Object receiver, Method method, Object... args) {
+    /** Wrap a method invocation. */
+    private Symbol wrapInvocation(Object receiver, Method method, @Nullable Object... args) {
         try {
-            return (Symbol) method.invoke(receiver, args);
+            @SuppressWarnings("nullness") // assume arguments are OK
+            @NonNull Symbol res = (Symbol) method.invoke(receiver, args);
+            return res;
         } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-            Error err =
-                    new AssertionError(
-                            String.format(
-                                    "Unexpected Reflection error in wrapInvocation(%s, %s, %s)",
-                                    receiver, method, args));
-            err.initCause(e);
-            throw err;
+            throw new BugInCF(
+                    String.format(
+                            "Unexpected Reflection error in wrapInvocation(%s, %s, %s)",
+                            receiver, method, args),
+                    e);
         }
     }
 }
